--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
         "@angular/http": "4.1.0",
         "@angular/platform-browser": "4.1.0",
         "@angular/platform-browser-dynamic": "4.1.0",
-        "@ionic-native/camera": "^3.10.2",
-        "@ionic-native/core": "3.7.0",
+        "@ionic-native/camera": "^3.14.0",
+        "@ionic-native/core": "^3.14.0",
         "@ionic-native/facebook": "^3.14.0",
         "@ionic-native/geolocation": "^3.10.2",
+        "@ionic-native/google-maps": "^4.4.0",
         "@ionic-native/in-app-browser": "^3.10.2",
         "@ionic-native/splash-screen": "3.7.0",
         "@ionic-native/status-bar": "3.7.0",
@@ -37,10 +38,10 @@
         "cordova-plugin-console": "^1.0.7",
         "cordova-plugin-contacts": "^2.3.1",
         "cordova-plugin-device": "^1.1.6",
-        "cordova-plugin-facebook4": "^1.9.0",
-        "cordova-plugin-firebase": "^0.1.20",
+        "cordova-plugin-facebook4": "^1.9.1",
+        "cordova-plugin-firebase": "^0.1.24",
         "cordova-plugin-geolocation": "^2.4.3",
-        "cordova-plugin-googlemaps": "^1.4.0",
+        "cordova-plugin-googlemaps": "^1.4.5",
         "cordova-plugin-inappbrowser": "^1.7.1",
         "cordova-plugin-network-information": "^1.3.3",
         "cordova-plugin-splashscreen": "^3.2.2",
