--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,9 @@
     "sourceMap": true,
     "target": "es5"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
+  // "include": [
+  //   "src/**/*.ts"
+  // ],
   "exclude": [
     "node_modules"
   ],
